--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ Flask==3.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+langdetect==1.0.9
+langid==1.1.6
 MarkupSafe==3.0.2
+numpy==2.1.3
 requests==2.32.3
+six==1.17.0
 urllib3==2.2.3
 Werkzeug==3.1.3
